Nooch/Nooch.Web/Assets/Css/tweaks.css
/* ... */
@font-face {
	font-family: 'Roboto';
	font-style: italic;
	font-weight: 500;
	src: url("https://themes.googleusercontent.com/font?kit=daIfzbEw-lbjMyv4rMUUTj8E0i7KZn-EPnyo3HZu7kw") format("woff");
}
@font-face {
	font-family: 'Roboto';
	font-style: normal;
	font-weight: 700;
	src: url("https://themes.googleusercontent.com/font?kit=vxNK-E6B13CyehuDCmvQvw") format("woff");
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
    color: inherit;
    font-family: "Varela Round","Open Sans",Helvetica,Arial,sans-serif;
    font-weight: 500;
    line-height: 1.1;
}

h1 a:hover {text-decoration:none;}

.lt-gray-text 		{ color: #bcbec0 !important;}
.gray-text-dark		{ color: rgba(88,90,92,.95) !important;}
.red-text,
.negative-amount	{ color: rgb(169, 68, 66) !important;}
.orange-text 		{ color: #cc9933; }
.yellow-text 		{ color: #cccc33; }
.blue-text 			{ color: #3fabe1 !important;}
.light-green-text 	{ color: #7ab259; }
.green-text,
.text-success		{ color: #72bf44 !important; }
.purp-text			{ color: #5a538d; }
.white-text			{ color: #fff !important; }

.capitalize { text-transform: capitalize !important; }
/*
 * Generate Margin Class
 * margin, margin-top, margin-bottom, margin-left, margin-right
 */
.m-0 {margin: 0px !important;}
.m-t-0 {margin-top: 0px !important;}
.m-b-0 {margin-bottom: 0px !important;}
.m-l-0 {margin-left: 0px !important;}
.m-r-0 {margin-right: 0px !important;}
.m-5 {margin: 5px !important;}
.m-t-5 {margin-top: 5px !important;}
.m-b-5 {margin-bottom: 5px !important;}
.m-l-5 {margin-left: 5px !important;}
.m-r-5 {margin-right: 5px !important;}
.m-10 {margin: 10px !important;}
.m-t-10 {margin-top: 10px !important;}
.m-b-10 {margin-bottom: 10px !important;}
.m-l-10 {margin-left: 10px !important;}
.m-r-10 {margin-right: 10px !important;}
.m-15 {margin: 15px !important;}
.m-t-15 {margin-top: 15px !important;}
.m-b-15 {margin-bottom: 15px !important;}
.m-l-15 {margin-left: 15px !important;}
.m-r-15 {margin-right: 15px !important;}
.m-20 {margin: 20px !important;}
.m-t-20 {margin-top: 20px !important;}
.m-b-20 {margin-bottom: 20px !important;}
.m-l-20 {margin-left: 20px !important;}
.m-r-20 {margin-right: 20px !important;}
.m-25 {margin: 25px !important;}
.m-t-25 {margin-top: 25px !important;}
.m-b-25 {margin-bottom: 25px !important;}
.m-l-25 {margin-left: 25px !important;}
.m-r-25 {margin-right: 25px !important;}
.m-30 {margin: 30px !important;}
.m-t-30 {margin-top: 30px !important;}
.m-b-30 {margin-bottom: 30px !important;}
.m-l-30 {margin-left: 30px !important;}
.m-r-30 {margin-right: 30px !important;}
/** Generate Padding Class
 * padding, padding-top, padding-bottom, padding-left, padding-right **/
.p-0 {padding: 0px !important;}
.p-t-0 {padding-top: 0px !important;}
.p-b-0 {padding-bottom: 0px !important;}
.p-l-0 {padding-left: 0px !important;}
.p-r-0 {padding-right: 0px !important;}
.p-5 {padding: 5px !important;}
.p-t-5 {padding-top: 5px !important;}
.p-b-5 {padding-bottom: 5px !important;}
.p-l-5 {padding-left: 5px !important;}
.p-r-5 {padding-right: 5px !important;}
.p-10 {padding: 10px !important;}
.p-t-10 {padding-top: 10px !important;}
.p-b-10 {padding-bottom: 10px !important;}
.p-l-10 {padding-left: 10px !important;}
.p-r-10 {padding-right: 10px !important;}
.p-15 {padding: 15px !important;}
.p-t-15 {padding-top: 15px !important;}
.p-b-15 {padding-bottom: 15px !important;}
.p-l-15 {padding-left: 15px !important;}
.p-r-15 {padding-right: 15px !important;}
.p-20 {padding: 20px !important;}
.p-t-20 {padding-top: 20px !important;}
.p-b-20 {padding-bottom: 20px !important;}
.p-l-20 {padding-left: 20px !important;}
.p-r-20 {padding-right: 20px !important;}
.p-25 {padding: 25px !important;}
.p-t-25 {padding-top: 25px !important;}
.p-b-25 {padding-bottom: 25px !important;}
.p-l-25 {padding-left: 25px !important;}
.p-r-25 {padding-right: 25px !important;}
.p-30 {padding: 30px !important;}
.p-t-30 {padding-top: 30px !important;}
.p-b-30 {padding-bottom: 30px !important;}
.p-l-30 {padding-left: 30px !important;}
.p-r-30 {padding-right: 30px !important;}
/** Font Weight **/
.f-300 {font-weight: 300 !important;}
.f-400 {font-weight: 400 !important;}
.f-500 {font-weight: 500 !important;}
.f-600 {font-weight: 600 !important;}
.f-700 {font-weight: 700 !important}
/**** TEXT / FONT ****/
.f-10 {
    font-size: 10px !important;
}

.f-11 {
    font-size: 11px !important;
}

.f-12 {
    font-size: 12px !important;
}

.f-13 {
    font-size: 13px !important;
}

.f-14 {
    font-size: 14px !important;
}

.f-15 {
    font-size: 15px !important;
}

.f-16 {
    font-size: 16px !important;
}

.f-17 {
    font-size: 17px !important;
}

.f-18 {
    font-size: 18px !important;
}

.f-19 {
    font-size: 19px !important;
}

.f-20 {
    font-size: 20px !important;
}

.f-21 {
    font-size: 21px !important;
}

.f-22 {
    font-size: 22px !important;
}

.f-23 {
    font-size: 23px !important;
}

.f-24 {
    font-size: 24px !important;
}

.f-25 {
    font-size: 25px !important;
}

.f-30 {
    font-size: 30px !important;
}

.f-600 {
    font-weight: 600;
}


.btn-primary {
	background: -webkit-linear-gradient(#6dbee8, #41abe1);
	background:    -moz-linear-gradient(#6dbee8, #41abe1);
	background: 	 -o-linear-gradient(#6dbee8, #41abe1);
	background: 	   -webkit-gradient(#6dbee8, #41abe1);
	background: 		linear-gradient(#6dbee8, #41abe1);
	text-shadow: 0px 1px rgba(19, 32, 38, 0.25);
}
.btn-success, .btn-success:active, .green-gradient {
    background: -webkit-linear-gradient(top, #7fd034,#6ab029);
	background:    -moz-linear-gradient(top, #7fd034,#6ab029);
	background:      -o-linear-gradient(top, #7fd034,#6ab029);
	background: 	   -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #7fd034), color-stop(100%, #6ab029));
	background: 		linear-gradient(top, #7fd034,#6ab029);
	text-shadow: 0px 1px rgba(26, 38, 19, 0.3);
}
/* ... */

